# mate-main-menu

./: .cvsignore  AUTHORS  COPYING  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.in  gnome-main-menu.doap  mate-main-menu.doap
application-browser/etc/: .cvsignore  Makefile.am  application-browser.desktop.in.in  application-browser.schemas.in
application-browser/src/: .cvsignore  Makefile.am  app-layout.c  app-layout.h  app-window.c  app-window.h  application-browser.c
caja-main-menu/: caja-main-menu.c  main-menu.c
control-center/etc/: .cvsignore  Makefile.am  control-center.desktop.in.in  control-center.schemas.in
control-center/src/: .cvsignore  Makefile.am  control-center.c
libslab/: ChangeLog  Makefile.am  app-resizer.c  app-resizer.h  app-shell-startup.c  app-shell-startup.h  app-shell.c  app-shell.h  application-tile.c  application-tile.h  bookmark-agent-libslab.h  bookmark-agent.c  bookmark-agent.h  directory-tile.c  directory-tile.h  document-tile.c  document-tile.h  eggaccelerators.h  eggbookmarkfile.c  eggbookmarkfile.h  gnome-utils.c  libslab-bookmarkfile.c  libslab-bookmarkfile.h  libslab-utils.c  libslab-utils.h  libslab.pc.in  nameplate-tile.c  nameplate-tile.h  recent-files.c  search-bar.c  search-bar.h  search-context-picker.c  search-context-picker.h  search-entry.c  search-entry.h  shell-window.c  shell-window.h  slab-gnome-util.c  slab-gnome-util.h  slab-section.c  (+3 more)
libtile/: Makefile.am  application-tile.c  application-tile.h  document-tile.c  document-tile.h  nameplate-tile.c  nameplate-tile.h  tile-action.c  tile.c  tile.h
main-menu/etc/: .cvsignore  GNOME_MainMenu.server.in.in  GNOME_MainMenu_ContextMenu.xml  MATE_MainMenu.server.in.in  MATE_MainMenu_ContextMenu.xml  Makefile.am  applications.xbel  documents.xbel  gnome-screensaver-lock.desktop  gnome-session-kill.desktop  gnome-session-logout.desktop  gnome-session-shutdown.desktop  main-menu-rug.desktop.in  mate-screensaver-lock.desktop  mate-session-logout.desktop  mate-session-shutdown.desktop  places.xbel  slab.schemas.in.in  system-items.xbel  system-items.xbel.in  trigger-panel-run-dialog.desktop  trigger-panel-run-dialog.desktop.in.in
main-menu/src/: .cvsignore  Makefile.am  bookmark-tile-table.c  bookmark-tile-table.h  eggaccelerators.h  file-area-widget.c  file-area-widget.h  hard-drive-status-tile.c  hard-drive-status-tile.h  main-menu-common.h  main-menu-conf.c  main-menu-conf.h  main-menu-engine.c  main-menu-migration.c  main-menu-migration.h  main-menu-ui.c  main-menu-ui.h  main-menu.c  network-status-agent.c  network-status-agent.h  network-status-info.c  network-status-info.h  network-status-tile.c  network-status-tile.h  recent-apps-tile-table.c  recent-apps-tile-table.h  recent-docs-tile-table.c  recent-docs-tile-table.h  recent-files.c  recent-files.h  slab-button.ui  slab-window.c  slab-window.glade  slab-window.h  slab-window.ui  system-tile-table.c  system-tile-table.h  system-tile.c  system-tile.h  text-button.c  (+12 more)
nautilus-main-menu/: Makefile.am  caja-main-menu.h  main-menu.c  nautilus-main-menu.c  nautilus-main-menu.h
patch/: Makefile.am  gnome-desktop-recently-used-apps.patch  gnome-panel-recently-used-apps.patch  mate-desktop-recently-used-apps.patch  mate-panel-recently-used-apps.patch
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  ar.po  as.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  en_IGID.po  en_US.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  km.po  (+35 more)
utils/: Makefile.am  double-click-detector.c  double-click-detector.h  egg-recent-item.c  egg-recent-item.h  egg-recent-model.c  egg-recent-model.h  eggaccelerators.c  eggaccelerators.h  gnome-utils.c  gnome-utils.h  recent-files.c  slab-gnome-util.c  slab-gnome-util.h  themed-icon.c  themed-icon.h
