SUBDIRS =				\
	libslab				\
	application-browser/etc		\
	application-browser/src		\
	control-center/etc		\
	control-center/src		\
	main-menu/etc			\
	main-menu/src			\
	patch				\
	po

EXTRA_DIST =				\
	intltool-extract.in		\
	intltool-merge.in		\
	intltool-update.in

DISTCLEANFILES =			\
	intltool-extract		\
	intltool-merge			\
	intltool-update
